zetasql/parser/testdata/load.test
load data infile 'data.csv' into table foo options (charset = 'utf-8');
--
LoadDataStatement [0-70]
  StringLiteral('data.csv') [17-27]
  PathExpression [39-42]
    Identifier(foo) [39-42]
  OptionsList [51-70]
    OptionsEntry [52-69]
      Identifier(charset) [52-59]
      StringLiteral('utf-8') [62-69]
--
LOAD DATA INFILE 'data.csv' INTO TABLE foo OPTIONS(charset = 'utf-8')
==

load data infile 'data' into table db1.foo;
--
LoadDataStatement [0-42]
  StringLiteral('data') [17-23]
  PathExpression [35-42]
    Identifier(db1) [35-38]
    Identifier(foo) [39-42]
--
LOAD DATA INFILE 'data' INTO TABLE db1.foo
==

load data infile into table table1;
--
ERROR: Syntax error: Expected string literal but got keyword INTO [at 1:18]
load data infile into table table1;
                 ^
==

load data infile 'data.file' into table;
--
ERROR: Syntax error: Unexpected ";" [at 1:40]
load data infile 'data.file' into table;
                                       ^
==
